fix: Follower 리뷰 반영